[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "liveguard"
version = "1.0.0"
description = "A terminal-based auto-backup utility for developers."
dependencies = [
    "textual",
    "watchdog"
]

[project.scripts]
liveguard = "liveguard.main:run"